Fix vercel.json: correct destination paths for subpath deployment

--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,11 @@
   "rewrites": [
     {
       "source": "/english",
-      "destination": "/english/index.html"
+      "destination": "/index.html"
     },
     {
       "source": "/english/(.*)",
-      "destination": "/english/index.html"
+      "destination": "/index.html"
     }
   ]
 }
