--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,4 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "build",
-  "rewrites": [
-    {
-      "source": "/english",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/english/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  "outputDirectory": "build"
 }
